Fixing Grade not showing in printed page

--- a/fpo/public/less/fpo.less
+++ b/fpo/public/less/fpo.less
@@ -19,7 +19,8 @@
 	margin-bottom: 5px;
 }
 
-.pop-item-text {
+.pop-item-text,
+.pop-item-grade {
 	padding: 0px 5px;
 }
 
